--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 netlify
                 netlify-honeypot="bot-field"
                 data-netlify-recaptcha="true"
-                action="/thank-you"
+                action="/thank-you.html"
             >
                 <!-- Honeypot field (hidden from users) -->
                 <p style="display: none;">
